--- a/package.json
+++ b/package.json
@@ -5,7 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "ts-node ./lib/core/app.ts"
+    "start": "ts-node ./lib/core/app.ts",
+    "lint": "eslint . --ext .ts",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*.ts": [
+      "prettier --write --ignore-unknown"
+    ],
+    "packages/**/*.json": [
+      "prettier --ignore-path ./.prettierignore --write"
+    ],
+    "*.ts": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +26,10 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.0",
+    "prettier": "2.8.7",
+    "pretty-quick": "^3.1.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
