--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node ./lib/app/main.ts",
+    "start": "ts-node ./lib/example/server.example.ts",
     "lint": "eslint . --ext .ts",
     "prepare": "husky install"
   },
